===============================================================================
2.0.6 public release
===============================================================================

Tue Jun 29 16:04:48 1993  Kevin Layer  (layer@sole)

	* Makefile.fi: release rules
	* UserGuide.n: change version number.

	* Doc.el: *.el -> fi-*.el
	* Makefile: *.el -> fi-*.el, can't use lemacs to compile .el
	files, because they can't be loaded into an 18.x emacs.
	* fi-site-init.el: *.el -> fi-*.el
	* fi-site-load.el: *.el -> fi-*.el
	* fi-test.el: *.el -> fi-*.el
	* fi-utils.el: fix test for lemacs

*******************************************************************************
renamed files (*.el -> fi-*.el)
*******************************************************************************

Tue Jun 29 15:00:03 1993  Kevin Layer  (layer at sole)

	* Makefile: use lemacs instead of emacs

	* keys.el: put a condition-case around the require of 'tags,
	fi::mark

	* utils.el, ring.el, lze.el: fi::mark

Fri Jun 18 13:00:20 1993  Kevin Layer  (layer@sole)

	* modes.el: make mode line checking of "package: " more robust

	* keys.el: deal with comment-start being a regexp

	* subproc.el: print process separators on a line by themselves

	* site-init.el:
	* site-load.le: work in progress (to make eli loadable at build
	time)

===============================================================================
public release 2.0.5 (with acl 4.2.beta2.0 on sun4)
===============================================================================

Thu Apr 29 11:52:57 1993  Kevin Layer  (layer@sole)

>>>	* lep.el: new externals: fi:trace-definition and fi:gdb

	* clman.el: fix display of *clman* buffer

Thu Apr 15 15:32:12 1993  Kevin Layer  (layer@sole)

	* clman.el: fix defaulting of symbol in fi:clman

Mon Apr 12 09:36:15 1993  Kevin Layer  (layer@sole)

	* indent.el: add clim 2.x indent methods

===============================================================================
public release 2.0.4