@@ -2,6 +2,12 @@
 2.0.6 public release
 ===============================================================================
 
+Thu Jul  1 13:15:57 1993  Kevin Layer  (layer at sole)
+
+	* Makefile.fi: more fixes to the rdist rule
+
+	* fi-clman.el: fix fi::manual-dir init form
+
 Tue Jun 29 16:04:48 1993  Kevin Layer  (layer@sole)
 
 	* Makefile.fi: release rules
